# quantcortex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PERFORMANCE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
alpha/factors/classical/: _cross_section.py  low_vol.py  momentum.py  quality.py  value.py
alpha/factors/ml/: gbdt_factor.py  neural_factor.py
alpha/factors/nlp/: finbert_sentiment.py  news_scorer.py
alpha/feature_engineering/: alpha158.py  macro_features.py
alpha/validation/: alphalens_report.py  factor_decay.py
backtest/costs/: transaction_costs.py
backtest/engines/: event_driven.py  vectorized.py  walk_forward.py
backtest/execution_models/: ideal_fill.py  market_impact.py  vwap_fill.py
backtest/metrics/: tearsheet.py
backtest/validation/: deflated_sharpe.py  lookahead_audit.py  multiple_testing.py  survivorship_check.py
data/processors/: calendar.py  lookahead_detector.py  pit_enforcer.py
data/providers/: alpaca_provider.py  base.py  ccxt_provider.py  fmp_provider.py  fred_provider.py  polygon_provider.py  yfinance_provider.py
data/sample/: README.md
data/storage/: parquet_store.py  redis_cache.py  timescale_store.py
data/universe/: base.py  nasdaq100_universe.py  sp500_universe.py  sp500_wikipedia.py
docs/: architecture.md  data-source-due-diligence.md  evaluation-contracts.md  history-rewrite-plan.md  production-readiness.md
docs/img/: performance_manifest.json
execution/: order_manager.py  position_manager.py  pre_trade_risk.py  state_persistence.py
execution/brokers/: alpaca_broker.py  base.py  ccxt_broker.py  ib_broker.py
local_data/: README.md
paper/: COMPUTE.md  README.md  anonymous.tex  build_manifest.json  checklist.tex  main.tex  preregistration.md  quantcortex_audit_anonymous.sha256  quantcortex_audit_neurips2026.sha256  quantcortex_audit_neurips2026.sources.sha256  references.bib
paper/expansion/: protocol.json
paper/expansion/results/: contract_effects.csv  data_provenance.json  engine_conformance.csv  family_summary.csv  generated_values.tex  learned_fit_diagnostics.csv  manifest.json  rank_reversals.csv  seed_variant_metrics.csv  target_tape_hashes.json
paper/results/: ablation.csv  ablation_uncertainty.csv  accounting.csv  bootstrap_sensitivity.csv  comparator_diagnostics.csv  cost_sensitivity.csv  engine_comparison.csv  evaluation_contract.json  generated_values.tex  manifest.json  protocol_switches.csv  return_decomposition.csv  sharpe_uncertainty.csv  subperiods.csv  target_tape_hashes.json  uncertainty.json  yearly_returns.csv
portfolio/: base.py  black_litterman.py  drl_allocator.py  equal_weight.py  hrp.py  mean_variance.py  minimum_variance.py  risk_parity.py
quantcortex/: __init__.py
quantcortex/alpha/feature_engineering/: alpha158.py  macro_features.py
quantcortex/alpha/validation/: alphalens_report.py  factor_decay.py
quantcortex/backtest/: conformance.py
quantcortex/backtest/costs/: transaction_costs.py
quantcortex/backtest/engines/: cash.py  event_driven.py  vectorized.py  walk_forward.py
quantcortex/backtest/execution_models/: ideal_fill.py  market_impact.py  vwap_fill.py
quantcortex/backtest/metrics/: plotting.py  tearsheet.py
quantcortex/backtest/validation/: deflated_sharpe.py  lookahead_audit.py  multiple_testing.py  survivorship_check.py
quantcortex/data/: local_csv.py
quantcortex/data/processors/: adjustments.py  calendar.py  lookahead_detector.py  pit_enforcer.py
quantcortex/data/providers/: alpaca_provider.py  base.py  ccxt_provider.py  fmp_provider.py  fred_provider.py  polygon_provider.py  yfinance_provider.py
quantcortex/data/sample/: README.md  rotation_prices.csv
quantcortex/data/storage/: parquet_store.py  redis_cache.py  timescale_store.py
quantcortex/execution/: order_manager.py  position_manager.py  pre_trade_risk.py  state_persistence.py
quantcortex/portfolio/: base.py  black_litterman.py  drl_allocator.py  equal_weight.py  hrp.py  mean_variance.py  minimum_variance.py  risk_parity.py
quantcortex/research/: __init__.py  expansion.py
quantcortex/risk/: circuit_breaker.py  factor_exposure.py  kelly.py  var_cvar.py  vol_targeting.py
quantcortex/strategies/: base_strategy.py  drl_portfolio.py  macro_timing.py  momentum_ml.py  multi_asset_rotation.py  sentiment_nlp.py
quantcortex/timing/: hmm_regime.py  kama.py  tsmom.py  vix_scaler.py
research/: 01_data_quality.ipynb  02_factor_research.ipynb  03_portfolio_construction.ipynb  04_backtest_analysis.ipynb  05_live_trading_bridge.ipynb
risk/: circuit_breaker.py  factor_exposure.py  kelly.py  var_cvar.py  vol_targeting.py
schemas/: canonical_target_tape.schema.json  evaluation_contract.schema.json
scripts/: build_paper.sh  fetch_expansion_data.py  generate_report.py  paper_trade_cycle.py  release_expansion_artifacts.sh  release_paper_artifacts.sh  run_expansion_experiments.py  run_paper_experiments.py  survivorship_demo.py  update_dependency_locks.sh  validate_performance.py  verify_brokers.py
strategies/: base_strategy.py  drl_portfolio.py  macro_timing.py  momentum_ml.py  multi_asset_rotation.py  sentiment_nlp.py
tests/: build_notebook_fixtures.py  conftest.py  test_backtest_conformance.py  test_broker_sdk_conformance.py  test_container_config.py  test_data_integrity.py  test_dependency_locks.py  test_execution_safety.py  test_expansion_artifacts.py  test_factor_integrity.py  test_fail_closed_invariants.py  test_import_surface.py  test_local_csv.py  test_lookahead_detector.py  test_order_manager.py  test_paper_artifacts.py  test_paper_experiments.py  test_pit_enforcer.py  test_plotting_style.py  test_regression_guards.py  test_repository_data_policy.py  test_research_expansion.py  test_research_validation.py  test_risk_overlay.py  test_script_data_sources.py  test_transaction_costs.py  test_weight_interface.py  verify_notebook_outputs.py
timing/: hmm_regime.py  kama.py  tsmom.py  vix_scaler.py
(+20 files in other folders)
