[tool.poetry]
name = "quantcortex"
version = "0.1.0"
description = "State-of-the-art modular quant trading platform: Data → Alpha → Portfolio → Timing → Risk → Backtest → Execution"
authors = ["magnaquant"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "data" },
    { include = "alpha" },
    { include = "portfolio" },
    { include = "timing" },
    { include = "risk" },
    { include = "backtest" },
    { include = "execution" },
    { include = "strategies" },
]

[tool.poetry.dependencies]
python = "^3.11"

# --- scientific core (required) ---
numpy = ">=1.26"
pandas = ">=2.1"
scipy = ">=1.11"
scikit-learn = ">=1.3"
matplotlib = ">=3.8"
pyarrow = ">=14.0"

# --- gradient-boosted decision trees (alpha/factors/ml) ---
xgboost = { version = ">=2.0", optional = true }
lightgbm = { version = ">=4.1", optional = true }
catboost = { version = ">=1.2", optional = true }

# --- reinforcement learning (portfolio/drl_allocator) ---
"stable-baselines3" = { version = ">=2.2", extras = ["extra"], optional = true }
gymnasium = { version = ">=0.29", optional = true }

# --- regime detection (timing/hmm_regime) ---
hmmlearn = { version = ">=0.3", optional = true }

# --- NLP / sentiment (alpha/factors/nlp) ---
transformers = { version = ">=4.38", optional = true }
torch = { version = ">=2.2", optional = true }

# --- brokers / execution ---
alpaca-trade-api = { version = ">=3.1", optional = true }
ib_insync = { version = ">=0.9.86", optional = true }
ccxt = { version = ">=4.2", optional = true }

# --- data providers ---
yfinance = { version = ">=0.2.37", optional = true }
polygon-api-client = { version = ">=1.13", optional = true }
fredapi = { version = ">=0.5", optional = true }

# --- storage / infra ---
redis = { version = ">=5.0", optional = true }
sqlalchemy = { version = ">=2.0", optional = true }
psycopg2-binary = { version = ">=2.9", optional = true }

[tool.poetry.extras]
ml = ["xgboost", "lightgbm", "catboost"]
rl = ["stable-baselines3", "gymnasium"]
regime = ["hmmlearn"]
nlp = ["transformers", "torch"]
brokers = ["alpaca-trade-api", "ib_insync", "ccxt"]
providers = ["yfinance", "polygon-api-client", "fredapi"]
storage = ["redis", "sqlalchemy", "psycopg2-binary"]
all = [
    "xgboost", "lightgbm", "catboost",
    "stable-baselines3", "gymnasium",
    "hmmlearn", "transformers", "torch",
    "alpaca-trade-api", "ib_insync", "ccxt",
    "yfinance", "polygon-api-client", "fredapi",
    "redis", "sqlalchemy", "psycopg2-binary",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.1"
jupyter = ">=1.0"
nbconvert = ">=7.0"
ipykernel = ">=6.29"
ruff = ">=0.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# The repository root *is* the package root (no src/ layout), so put it on the
# import path: `import portfolio`, `import data`, etc. resolve from the root.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--tb=short -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
